2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs: quick class
	  browser now shows full inner type name.

2009-09-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Only set the
	  search engine, when the option is changed.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Added some
	  error handling code.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Corrected
	  caret position after format.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on
	  formatting.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on
	  on the fly format for code template insertion.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Track API
	  changes.

2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Fixed code
	  completion + auto insert braces bug.

2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on
	  template formatting.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs:
	  Fixed syntax style verification.

2009-09-09  Christian Hergert  <chris@dronelabs.com>

	* MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs:
	  Set the dialog transient to our widgets toplevel.

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  537375 - Completed text not immediately updated'.

2009-09-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed build.

2009-09-03  Mike Krüger  <mkrueger@novell.com>
